# coding_agent

coding-agent/: .env  Cargo.toml
coding-agent/src/: main.rs
coding-agent/src/ai_function/: mod.rs
coding-agent/src/apis/: call_req.rs  mod.rs
coding-agent/src/models/: mod.rs
coding-agent/src/models/agent/: agent_architect.rs  agent_backend.rs  agent_traits.rs
coding-agent/src/models/agent_basics/: basic_agent.rs  basic_traits.rs
coding-agent/src/models/agents_manager/: managing_agent.rs
coding-agent/src/models/generals/: llm.rs
coding-agent/src/utils/: command_line_utils.rs  general.rs  mod.rs
