[package]
name = "coding-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ai_functions = "0.1.1"
async-trait = "0.1.79"
crossterm = "0.27.0"
dotenv = "0.15.0"
reqwest = {version="0.12.1",features =["json"]}
serde = {version="1.0.197",features =["derive"]}
serde_json = "1.0.114"
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = {version="1.36.0",features =["full"]}
webbrowser = "0.8.13"
